# sentiment-analysis

./: .gitignore  README.md  predict.py  pyproject.toml  train.py
notebooks/: bert_sentiment.ipynb  logistic_regression_catboost_baseline.ipynb
src/: __init__.py  config.py  dataset.py  features.py  inference.py  mlm.py  model.py  trainer.py
